# snapshot-debugger

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  setup.cfg  setup.py
cli/: COMMAND_REFERENCE.md  __main__.py  breakpoint_utils.py  cli.py  cli_services.py  data_formatter.py  delete_snapshots_command.py  firebase_management_rest_service.py  firebase_types.py  format_utils.py  gcloud_cli_service.py  get_snapshot_command.py  http_service.py  init_command.py  list_debuggees_command.py  list_snapshots_command.py  permissions_rest_service.py  set_snapshot_command.py  snapshot_debugger_rtdb_service.py  snapshot_parser.py  user_input.py  user_output.py
cli_tests/: test_data_formatter.py  test_list_debuggees_command.py  test_list_debuggess_command.py  test_snapshot_debugger_schema.py
docs/: SCHEMA.md  configuration.md  java.md  node-js.md  python.md  troubleshooting.md
samples/: README.md  app_engine_flexible_prerequisites.md  app_engine_standard_prerequisites.md  app_engine_standard_prerequisties.md  common_samples_prerequisites.md  gce_samples_prerequisites.md
snapshot_dbg_cli/: COMMAND_REFERENCE.md  __init__.py  __main__.py  breakpoint_utils.py  cli.py  cli_common_arguments.py  cli_run.py  cli_services.py  cli_version.py  data_formatter.py  debuggee_utils.py  delete_breakpoints.py  delete_debuggees_command.py  delete_logpoints_command.py  delete_snapshots_command.py  firebase_management_rest_service.py  firebase_rtdb_rest_service.py  firebase_types.py  gcloud_cli_service.py  get_logpoint_command.py  get_snapshot_command.py  http_service.py  (+14 more)
(+141 files in other folders)
