[metadata]
name= snapshot-dbg-cli
version = attr: snapshot_dbg_cli.__version__
description='Snapshot Debugger CLI tool.'
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License, Version 2.0
author = Google Inc.
keywords = cloud, snapshot, debugger
url = https://github.com/GoogleCloudPlatform/snapshot-debugger
project_urls =
  CLI Source = https://github.com/GoogleCloudPlatform/snapshot-debugger
  Java Agent Source = https://github.com/GoogleCloudPlatform/cloud-debug-java
  Node.js Agent Source = https://github.com/googleapis/cloud-debug-nodejs
  Python Agent Source = https://github.com/GoogleCloudPlatform/cloud-debug-java

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Debuggers

[options]
packages = snapshot_dbg_cli

[options.entry_points]
console_scripts =
    snapshot-dbg-cli = snapshot_dbg_cli:run_main
